# ojiCoder-800M-PoC

./: PLAN.md  PROJECT.md  TODO.md  pyproject.toml
configs/data/: base_manifest.json  stage1_external_manifest.json
configs/model/: 800m.json
configs/tokenizer/: base_bpe.json  corpus_manifest.json
configs/train/: stages.json
src/eight_hundred_m/: __init__.py  cli.py  config.py  modeling.py
src/eight_hundred_m/data/: __init__.py  external.py  languages.py  manifest.py  packing.py  planning.py
src/eight_hundred_m/tokenizer/: __init__.py  corpus.py  runtime.py  spec.py  trainer.py  validation.py
src/eight_hundred_m/training/: __init__.py  loop.py  runner.py  smoke.py  stages.py
tests/: test_cli_and_loop.py  test_config.py  test_external_ingest.py  test_manifests.py  test_model.py  test_pipeline_planning.py  test_tokenizer_runtime_and_smoke.py  test_training_runner.py
